# django-list-table-filter

./: LICENSE  README.md  pyproject.toml
src/DjangoListTableFilterMixin/: apps.py  mixins.py
