[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[project]
name = "django-list-table-filter"
version = "0.4.12"

authors = [
  { name="Roberto Himmelbauer", email="robertoh89@gmail.com" },
]
description = "Simple Mixin to handle search, pagination, and ordering on Django ListViews"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["django", "app"]
dependencies = [
    "Django>=3.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-black",
    "mypy",
    "bandit",
    "isort",
    "dj-database-url",
    "psycopg2-binary",
    "django-crispy-forms",
    "django-site-configs",
    "django-integrations",
    "django-allauth",
    "toml",
]
docs= [
    "recommonmark",
    "m2r",
    "django_extensions",
    "coverage",
    "Sphinx",
    "rstcheck",
    "sphinx-rtd-theme",
]

[project.urls]
"Homepage" = "https://github.com/rhimmelbauer/django-list-table-filter"
"Bug Tracker" = "https://github.com/rhimmelbauer/django-list-table-filter/issues"

[tool.setuptools.package-data]
vendor = []
